Fixed borders between squares not showing when creating board

--- a/src/modules/Initialize/styles.css
+++ b/src/modules/Initialize/styles.css
@@ -5,6 +5,8 @@ html,
 body {
   margin: 0;
   padding: 0;
+  min-width: 0;
+  box-sizing: border-box;
 }
 
 html,
