--- a/src/modules/PlayerController/PlayerController.css
+++ b/src/modules/PlayerController/PlayerController.css
@@ -7,10 +7,12 @@
   border-bottom: 1px solid black;
   border-left: 1px solid black;
   background-color: #18abe6;
+  overflow: hidden;
 }
 
 .square-blink,
 .square-solid {
+  overflow: hidden;
   width: 100%;
   border-right: 1px solid black;
   border-top: 1px solid black;
